Writing some CRUD for api, improving openapi spec
