# apps/api/api_utils/api_utils.go
@@ -15,8 +15,8 @@ func GenerateUUID() string {
 }
 
 // Check to see if a WoWCharacter actually exists on wow armory
-func CheckWowCharacterExists(character *interfaces.WoWCharacter) (bool, error) {
-	url := fmt.Sprintf("https://worldofwarcraft.blizzard.com/en-us/character/%v/%v/%v", *character.Region, *character.Realm, *character.CharacterName)
+func CheckWowCharacterExists(character *interfaces.WowCharacter) (bool, error) {
+	url := fmt.Sprintf("https://worldofwarcraft.blizzard.com/en-us/character/%v/%v/%v", character.Region, character.Realm, character.CharacterName)
 	log.Printf("Checking if char exists at url: %v", url)
 
 	res, err := http.Get(url)
